add_executable(pipe pipe.c)

add_executable(fifo_read fifo_read.c)
add_executable(fifo_write fifo_write.c)


add_executable(mmap_r mmap_r.c)
add_executable(mmap_w mmap_w.c)

add_executable(shmread shmread.c)
add_executable(shmwrite shmwrite.c)


add_executable(myshmread myshmread.c)
add_executable(myshmwrite myshmwrite.c)